Updating hero image location and url

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,7 @@
 
   // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/heroBack.jpeg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/heroBack.jpeg");
   background-position: center;
   background-size: cover;
 
